rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-c2d2c1c2e8025bd2.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-c2d2c1c2e8025bd2: missing-argument.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/missing_argument_rs-c2d2c1c2e8025bd2.d: missing-argument.rs

missing-argument.rs:
